FIX overflow in desktop

--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -29,6 +29,7 @@ body {
 	color: $main;
 	font-family: 'Open Sans', sans-serif;
 	min-height: 100vh;
+	overflow: hidden;
 	padding: 0 20px;
 
 	.ec {
